--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!--<script src="https://kit.fontawesome.com/f87e7c9dd8.js" crossorigin="anonymous"></script>-->
+  <link rel="stylesheet" type="text/css">
+  <script src="https://kit.fontawesome.com/f87e7c9dd8.js" crossorigin="anonymous"></script>
 </head>
   <body>
 
